Render profile using RenderView and fix the blurred avatar background CSS.
Continues #669.

--- a/Resources/profile.css
+++ b/Resources/profile.css
@@ -4,50 +4,48 @@
   
   Copyright 2014 Awful Contributors. CC BY-NC-SA 3.0 US https://github.com/Awful/Awful.app
 */
+
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   background: #fff;
-  font-family: Helvetica, sans-serif;
+  font-family: -apple-system, sans-serif;
   font-size: 14px;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: 100%;
 }
+
 body.dark {
   background: #262626;
   color: #fff;
 }
-#headerBackground {
-  background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  left: 0;
-  right: 0;
+
+#customTitle {
+  position: relative;
   overflow: hidden;
-  z-index: 1;
-  display: block;
-  width: 100%;
 }
-#headerBackground > section {
-  -webkit-filter: blur(5px);
-  background-size: cover;
-  background-position-y: center;
+#headerBackground {
   position: absolute;
-  left: -20px;
-  right: -20px;
   top: -20px;
   bottom: -20px;
+  left: -20px;
+  right: -20px;
+  
+  background-size: cover;
+  background-position-y: center;
+  
+  -webkit-filter: blur(5px);
+  
+  z-index: -1;
 }
-#content {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-}
+
 img {
   max-width: 100%;
 }
+
 /* First section: avatar, custom title, "about me", profile image. */
 /* Avatar and custom title. */
 header {
@@ -59,20 +57,24 @@ header {
 header .bbc-center {
   text-align: center;
 }
+
 /* About me. */
 p {
   margin: 1em;
 }
-/* Profile image (users with plat can include one). */
-section > img {
+
+/* Profile picture (users with plat can include one). */
+#profilePicture {
   display: block;
   margin: 1em auto;
 }
+
 /* Second section: contact and additional info. */
 table {
   width: 100%;
   border-collapse: collapse;
 }
+
 /* Use table captions like UITableView headers (à la Forums tab). */
 table caption {
   text-align: left;
@@ -85,14 +87,17 @@ table caption {
 .dark table caption {
   background: #151515;
 }
+
 tr {
   height: 3em;
 }
+
 th {
   text-align: left;
   padding-left: 1em;
   width: 50%;
 }
+
 /* Blue Settings.app-like text for the current value. */
 td {
   color: #395684;
@@ -100,6 +105,7 @@ td {
 .dark td {
   color: #70baff;
 }
+
 /* Cell separator. */
 th,
 td {
@@ -113,6 +119,7 @@ tr:last-child th,
 tr:last-child td {
   border-bottom: 0;
 }
+
 /* Spoilers can appear in custom titles. */
 .bbc-spoiler:not(.spoiled) {
   color: #000000;
